--- a/realProject2/src/main/webapp/WEB-INF/views/assets/css/paper-dashboard.css
+++ b/realProject2/src/main/webapp/WEB-INF/views/assets/css/paper-dashboard.css
@@ -14,6 +14,10 @@
  
  */
 /*      light colors - used for select dropdown         */
+
+a {
+	cursor : pointer;
+}
 .ct-blue {
   stroke: #7A9E9F !important; }
 
@@ -344,7 +348,8 @@ hr {
   .sidebar .nav li:not(.active) > a, .sidebar[data-background-color="white"] .nav li:not(.active) > a,
   .off-canvas-sidebar .nav li:not(.active) > a,
   .off-canvas-sidebar[data-background-color="white"] .nav li:not(.active) > a {
-    color: #66615B; }
+    color: #66615B; 
+    cursor : pointer;}
   .sidebar .nav .divider, .sidebar[data-background-color="white"] .nav .divider,
   .off-canvas-sidebar .nav .divider,
   .off-canvas-sidebar[data-background-color="white"] .nav .divider {
